--- a/src/main/webapp/resources/css/Base.css
+++ b/src/main/webapp/resources/css/Base.css
@@ -200,4 +200,15 @@ a {
     border-radius: 4px;
 }
 
+.par {
+    width: 200px;
+    height: 200px;
+    border: 1px solid #000;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+}
+
+
+
 /*h1 { color: #c9d0d4; font-family: 'Helvetica Neue', sans-serif; font-size: 24px; font-weight: 100; line-height: 50px; letter-spacing: 1px; padding: 0 0 40px; border-bottom: double #555; }*/
